<resources>
    <string name="app_name">Movie Review App</string>
    <string name="button_addImage"> Add Image </string>
    <string name="moviereviewapp">MovieReviewApp</string>
    <string name="enter_a_userName">Please enter a User Name</string>
    <string name="enter_a_firstName">Please enter your First Name</string>
    <string name="enter_a_lastName">Please enter your Last Name</string>
    <string name="enter_a_email">Please enter your Email Address</string>
    <string name="enter_a_password">Please enter your Password</string>

    <string name="popular">Popular</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <string name="top_rated">Top Rated</string>
    <string name="highest_rated_movies">Highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay updated with the latest movies</string>

    <string name="create_email">Email</string>
    <string name="create_password">Passoword</string>
    <string name="sign_in">Sign In</string>
</resources>
